fix: ensure min height for portait orientation on mobile

--- a/public/output.css
+++ b/public/output.css
@@ -685,6 +685,9 @@
   .max-h-screen {
     max-height: 100vh;
   }
+  .min-h-64 {
+    min-height: calc(var(--spacing) * 64);
+  }
   .min-h-screen {
     min-height: 100vh;
   }
